making progress on views

--- a/templates/employees/employee_list.html
+++ b/templates/employees/employee_list.html
@@ -59,7 +59,7 @@
                 <img src="{{ employee.profile_image.url|default:'/static/assets/img/profile.png' }}" 
                      class="rounded-circle me-2" width="40" height="40">
                 <div>
-                  <h6 class="mb-0">{{ employee.user.get_full_name }}</h6>
+                  <h6 class="mb-0">{{ employee.first_name }} {{ employee.last_name }}</h6>
                   <small class="text-muted">{{ employee.employee_id }}</small>
                 </div>
               </div>
