--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -55,6 +55,8 @@
   <link href="{% static 'assets/css/extra.css'%}" rel="stylesheet">
   <link href="{% static 'assets/css/messages.css'%}" rel="stylesheet">
   <script src="{% static 'assets/js/messages.js'%}"></script>
+
+  <script src="https://unpkg.com/htmx.org@1.9.0"></script>
 </head>
 
   <body>
