--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -36,11 +36,11 @@
                 <i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="products-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
-                <li><a href="#"><i class="bi bi-tags"></i> Product Catalog</a></li>
+                <li><a href="{% url 'product_list'%}"><i class="bi bi-tags"></i> Product Catalog</a></li>
                 <li><a href="#"><i class="bi bi-box-seam"></i> Variants (Sizes/Flavors)</a></li>
                 <li><a href="#"><i class="bi bi-flower1"></i> Ingredients</a></li>
                 <li><a href="#"><i class="bi bi-clipboard2-check"></i> Quality Control</a></li>
-                <li><a href="#"><i class="bi bi-diagram-3"></i> Categories</a></li>
+                <li><a href="{% url 'category_list'%}"><i class="bi bi-diagram-3"></i> Categories</a></li>
             </ul>
         </li>
 
