--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -86,8 +86,19 @@
         
 
     </main><!-- End #main -->  
+
+    <div class="modal fade" id="quickViewModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content" id="quickViewContent">
+                <!-- HTMX will load content here -->
+            </div>
+        </div>
+    </div>
     
     {% include 'base/footer.html'%}
+
+
+    
 
  </body>
 
