--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -52,9 +52,9 @@
                 <i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="inventory-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
-                <li><a href="#"><i class="bi bi-house-gear"></i> Warehouses</a></li>
-                <li><a href="#"><i class="bi bi-arrow-left-right"></i> Stock Movements</a></li>
-                <li><a href="#"><i class="bi bi-card-checklist"></i> Purchase Orders</a></li>
+                <li><a href="{% url 'warehouse_list'%}"><i class="bi bi-house-gear"></i> Warehouses</a></li>
+                <li><a href="{% url 'stock_movement_list'%}"><i class="bi bi-arrow-left-right"></i> Stock Movements</a></li>
+                <li><a href="{% url 'purchase_order_list'%}"><i class="bi bi-card-checklist"></i> Purchase Orders</a></li>
                 <li><a href="#"><i class="bi bi-truck"></i> Suppliers</a></li>
                 <li><a href="#"><i class="bi bi-exclamation-triangle"></i> Low Stock Alerts</a></li>
             </ul>
