--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -56,7 +56,7 @@
                 <li><a href="{% url 'stock_movement_list'%}"><i class="bi bi-arrow-left-right"></i> Stock Movements</a></li>
                 <li><a href="{% url 'purchase_order_list'%}"><i class="bi bi-card-checklist"></i> Purchase Orders</a></li>
                 <li><a href="{% url 'supplier_list'%}"><i class="bi bi-truck"></i> Suppliers</a></li>
-                <li><a href="#"><i class="bi bi-exclamation-triangle"></i> Low Stock Alerts</a></li>
+                <li><a href="{% url 'low_stock_alerts'%}"><i class="bi bi-exclamation-triangle"></i> Low Stock Alerts</a></li>
             </ul>
         </li>
 
