--- a/templates/inventory/warehouse_detail.html
+++ b/templates/inventory/warehouse_detail.html
@@ -180,10 +180,10 @@
                             </td>
                             <td>
                                 <div class="btn-group btn-group-sm">
-                                    <a href="{% url 'inventory_item_update' item.pk %}" class="btn btn-coca-outline" title="Edit">
+                                    <a href="#" class="btn btn-coca-outline" title="Edit">
                                         <i class="bi bi-pencil-square"></i>
                                     </a>
-                                    <a href="{% url 'stock_movement_create' %}?inventory_item={{ item.pk }}" class="btn btn-coca-outline" title="Add Stock">
+                                    <a href="#" class="btn btn-coca-outline" title="Add Stock">
                                         <i class="bi bi-plus-circle"></i>
                                     </a>
                                     <a href="#" class="btn btn-coca-outline" title="View History">
