--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -69,7 +69,7 @@
             </a>
             <ul id="sales-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <li><a href="#"><i class="bi bi-cart-check"></i> Orders</a></li>
-                <li><a href="#"><i class="bi bi-building"></i> Customers</a></li>
+                <li><a href="{% url 'customer_list'%}"><i class="bi bi-building"></i> Customers</a></li>
                 <li><a href="#"><i class="bi bi-receipt"></i> Invoices</a></li>
                 <li><a href="#"><i class="bi bi-truck"></i> Deliveries</a></li>
                 <li><a href="#"><i class="bi bi-map"></i> Delivery Routes</a></li>
